<resources>
    <string name="app_name">Smart Notes</string>

    <!--NotesListActivity-->
    <string name="add_note">Добавить заметку</string>
    <string name="no_items">Нет заметок</string>
    <string name="item_deleted">Заметка удалена</string>

    <!--CreateNoteActivity-->
    <string name="create_note_title">Заголовок</string>
    <string name="create_note_text">Заметка</string>
    <string name="create_note_toast">Заполните все поля</string>
    <string name="priority">Приоритет</string>
    <string name="priority_default">Без приоритета</string>
    <string name="priority_low">Низкий</string>
    <string name="priority_medium">Средний</string>
    <string name="priority_high">Высокий</string>
    <string name="button_add">Добавить</string>
    <string name="button_cancel">Отменить</string>

    <!--PreviewActivity-->
    <string name="preview_title">Заметка</string>
    <string name="preview_remove_note">Удалить</string>
    <string name="preview_edit_note">Изменить</string>
    <string name="button_apply">Сохранить</string>
    <string name="save_as_file">Сохранить в файл</string>
    <string name="save_as_file_permission">Выдайте необходимые разрешения в настройках</string>
    <string name="saved_in">Сохранено в: </string>
    <string name="saving_error">Не сохранено</string>
</resources>
